Fixes to buttons and removed extra padding on the line widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -488,13 +488,11 @@ header.bk-header .widget.extendednavigation {
    LINE WIDGET
    =============================== */
 
-.widget.line {
-    padding: 20px 0;
-}
 
 hr.line {
    background-color: darken(@color-swatch2,6%);
    height: 2px;
+   margin: 20px 0;
    width: 100%;
    border: none;
 }
@@ -659,7 +657,7 @@ hr.line {
 .widget.tweet a {
   background-image: image('/images/twitter.png');
   background-repeat: no-repeat;
-  background-position: 15px 9px;
+  background-position: 15px center;
   // intentionally hard coded colours
   background-color: #00bdef;
   color: #fff;
@@ -670,7 +668,7 @@ hr.line {
   background-color: #00b4e3;
   background-image: image('/images/twitter.png');
   background-repeat: no-repeat;
-  background-position: 15px 9px;
+  background-position: 15px center;
   cursor: pointer;
 }
 
